# BAR

./: .env.example  PLAN.md  README.md  pyproject.toml
app/: config.py  main.py
app/api/: routes.py
app/core/: graph.py  llm.py  nodes.py  prompts.py  state.py
app/database/: vector_store.py
app/static/: index.html
bar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ingest.py
