[project]
name = "bar"
version = "0.1.0"
description = "Book Agentic RAG — LangGraph + Qdrant + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "qdrant-client>=1.12.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",

]

[tool.setuptools.packages.find]
include = ["app*"]
